--- a/site-cookbooks/manchesterio/templates/default/uisettings.py.erb
+++ b/site-cookbooks/manchesterio/templates/default/uisettings.py.erb
@@ -1,7 +1,7 @@
 # Configuration file for the HTML5 UI
 
 # Set these to be the values of your Molly REST server
-MOLLY_API_HOSTNAME = 'api.beta.manchester.io'
+MOLLY_API_HOSTNAME = '<%= @api_hostname %>'
 MOLLY_API_PORT = 80
 
 # This is the location of any custom templates you wish to use
@@ -11,7 +11,7 @@ MOLLY_API_PORT = 80
 #OVERRIDE_ASSET_DIR = ''
 
 # This is the place where assets should be served from
-ASSET_DIR = '/srv/manchester.io/compiled_media'
+ASSET_DIR = '<%= @root %>/compiled_media'
 
 # If you would like to add Sentry support to the UI, please specify your DSN below
 #SENTRY_DSN = ''
