--- a/site-cookbooks/manchesterio/templates/default/ui-server.erb
+++ b/site-cookbooks/manchesterio/templates/default/ui-server.erb
@@ -5,7 +5,7 @@ upstream ui_server {
 server {
     listen 80;
     client_max_body_size 4G;
-    server_name beta.manchester.io;
+    server_name <%= @ui_hostname %>;
 
     keepalive_timeout 5;
 
