--- a/site-cookbooks/manchesterio/templates/default/uisettings.py.erb
+++ b/site-cookbooks/manchesterio/templates/default/uisettings.py.erb
@@ -17,7 +17,7 @@ ASSET_DIR = '<%= @root %>/compiled_media'
 #SENTRY_DSN = ''
 
 # If you would like statsd support, please specify the hostname of the statsd server below
-#STATSD_HOST = "localhost"
+STATSD_HOST = "localhost"
 
 CACHE_TYPE = 'memcached'
 
