--- a/site-cookbooks/manchesterio/templates/default/uisettings.py.erb
+++ b/site-cookbooks/manchesterio/templates/default/uisettings.py.erb
@@ -14,7 +14,7 @@ MOLLY_API_PORT = 80
 ASSET_DIR = '<%= @root %>/compiled_media'
 
 # If you would like to add Sentry support to the UI, please specify your DSN below
-#SENTRY_DSN = ''
+SENTRY_DSN = '<%= @ui_sentry_dsn %>'
 
 # If you would like statsd support, please specify the hostname of the statsd server below
 STATSD_HOST = "localhost"
