Update fixtures file with changes to Sentry models

--- a/site-cookbooks/manchesterio/templates/default/sentry-fixtures.json.erb
+++ b/site-cookbooks/manchesterio/templates/default/sentry-fixtures.json.erb
@@ -529,7 +529,7 @@
     },
     {
         "pk": 1,
-        "model": "sentry.grouptag",
+        "model": "sentry.grouptagvalue",
         "fields": {
             "group": 1,
             "times_seen": 1,
@@ -542,7 +542,7 @@
     },
     {
         "pk": 2,
-        "model": "sentry.grouptag",
+        "model": "sentry.grouptagvalue",
         "fields": {
             "group": 1,
             "times_seen": 1,
@@ -555,7 +555,7 @@
     },
     {
         "pk": 3,
-        "model": "sentry.grouptag",
+        "model": "sentry.grouptagvalue",
         "fields": {
             "group": 1,
             "times_seen": 1,
@@ -568,7 +568,7 @@
     },
     {
         "pk": 4,
-        "model": "sentry.grouptag",
+        "model": "sentry.grouptagvalue",
         "fields": {
             "group": 1,
             "times_seen": 1,
@@ -581,7 +581,7 @@
     },
     {
         "pk": 5,
-        "model": "sentry.grouptag",
+        "model": "sentry.grouptagvalue",
         "fields": {
             "group": 1,
             "times_seen": 1,
@@ -594,7 +594,7 @@
     },
     {
         "pk": 6,
-        "model": "sentry.grouptag",
+        "model": "sentry.grouptagvalue",
         "fields": {
             "group": 2,
             "times_seen": 1,
@@ -607,7 +607,7 @@
     },
     {
         "pk": 7,
-        "model": "sentry.grouptag",
+        "model": "sentry.grouptagvalue",
         "fields": {
             "group": 2,
             "times_seen": 1,
@@ -620,7 +620,7 @@
     },
     {
         "pk": 8,
-        "model": "sentry.grouptag",
+        "model": "sentry.grouptagvalue",
         "fields": {
             "group": 2,
             "times_seen": 1,
@@ -633,7 +633,7 @@
     },
     {
         "pk": 9,
-        "model": "sentry.grouptag",
+        "model": "sentry.grouptagvalue",
         "fields": {
             "group": 2,
             "times_seen": 1,
@@ -646,7 +646,7 @@
     },
     {
         "pk": 10,
-        "model": "sentry.grouptag",
+        "model": "sentry.grouptagvalue",
         "fields": {
             "group": 2,
             "times_seen": 1,
@@ -701,690 +701,6 @@
             "times_seen": 1,
             "time_spent_count": 0,
             "time_spent_total": 0
-        }
-    },
-    {
-        "pk": 1,
-        "model": "sentry.searchdocument",
-        "fields": {
-            "status": 0,
-            "total_events": 1,
-            "group": 1,
-            "project": 2,
-            "date_added": "2013-10-13T18:49:42.163Z",
-            "date_changed": "2013-10-13T18:49:42.163Z"
-        }
-    },
-    {
-        "pk": 2,
-        "model": "sentry.searchdocument",
-        "fields": {
-            "status": 0,
-            "total_events": 1,
-            "group": 2,
-            "project": 3,
-            "date_added": "2013-10-13T18:50:14.496Z",
-            "date_changed": "2013-10-13T18:50:14.496Z"
-        }
-    },
-    {
-        "pk": 1,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "runner",
-            "document": 1,
-            "times_seen": 4
-        }
-    },
-    {
-        "pk": 2,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "transformer=self",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 3,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "__dict__",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 4,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "message",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 5,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "capture",
-            "document": 1,
-            "times_seen": 3
-        }
-    },
-    {
-        "pk": 6,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "get_loadavg",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 7,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "send_test_message",
-            "document": 1,
-            "times_seen": 3
-        }
-    },
-    {
-        "pk": 8,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "self",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 9,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "transform",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 10,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "loadavg",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 11,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "kwargs",
-            "document": 1,
-            "times_seen": 3
-        }
-    },
-    {
-        "pk": 12,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "main",
-            "document": 1,
-            "times_seen": 3
-        }
-    },
-    {
-        "pk": 13,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "events",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 14,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "raven",
-            "document": 1,
-            "times_seen": 8
-        }
-    },
-    {
-        "pk": 15,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "return",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 16,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "python",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 17,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "build_msg",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 18,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "none",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 19,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "message=message",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 20,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "base",
-            "document": 1,
-            "times_seen": 4
-        }
-    },
-    {
-        "pk": 21,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "scripts",
-            "document": 1,
-            "times_seen": 4
-        }
-    },
-    {
-        "pk": 22,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "1671",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 23,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "getsentry",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 24,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "exception",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 25,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "foo",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 26,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "this",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 27,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "root",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 28,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "capturemessage",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 29,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "client",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 30,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "com",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 31,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "example",
-            "document": 1,
-            "times_seen": 3
-        }
-    },
-    {
-        "pk": 32,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "opts",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 33,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "filters",
-            "token": "url",
-            "document": 1,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 34,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "runner",
-            "document": 2,
-            "times_seen": 4
-        }
-    },
-    {
-        "pk": 35,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "transformer=self",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 36,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "__dict__",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 37,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "message",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 38,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "capture",
-            "document": 2,
-            "times_seen": 3
-        }
-    },
-    {
-        "pk": 39,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "get_loadavg",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 40,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "send_test_message",
-            "document": 2,
-            "times_seen": 3
-        }
-    },
-    {
-        "pk": 41,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "self",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 42,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "transform",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 43,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "loadavg",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 44,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "kwargs",
-            "document": 2,
-            "times_seen": 3
-        }
-    },
-    {
-        "pk": 45,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "main",
-            "document": 2,
-            "times_seen": 3
-        }
-    },
-    {
-        "pk": 46,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "events",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 47,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "raven",
-            "document": 2,
-            "times_seen": 8
-        }
-    },
-    {
-        "pk": 48,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "return",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 49,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "python",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 50,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "build_msg",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 51,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "none",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 52,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "message=message",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 53,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "base",
-            "document": 2,
-            "times_seen": 4
-        }
-    },
-    {
-        "pk": 54,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "scripts",
-            "document": 2,
-            "times_seen": 4
-        }
-    },
-    {
-        "pk": 55,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "1671",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 56,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "getsentry",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 57,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "exception",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 58,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "foo",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 59,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "this",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 60,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "root",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 61,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "capturemessage",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 62,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "client",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 63,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "com",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 64,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "example",
-            "document": 2,
-            "times_seen": 3
-        }
-    },
-    {
-        "pk": 65,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "text",
-            "token": "opts",
-            "document": 2,
-            "times_seen": 2
-        }
-    },
-    {
-        "pk": 66,
-        "model": "sentry.searchtoken",
-        "fields": {
-            "field": "filters",
-            "token": "url",
-            "document": 2,
-            "times_seen": 2
         }
     }
 ]
