Style homepage hero title

--- a/manchesterio/assets/scss/manchesterio.scss
+++ b/manchesterio/assets/scss/manchesterio.scss
@@ -1,1 +1,8 @@
-* { color: red; }
+@import "bourbon";
+@import "compass/reset";
+@import "neat";
+
+@import "base";
+@import "typography";
+
+@import "homepage";
