Add basic homepage styling

--- a/assets/scss/manchesterio.scss
+++ b/assets/scss/manchesterio.scss
@@ -1,3 +1,10 @@
-.hello-world {
-  color: #f00;
-}
+// Utilities
+
+@import 'base/base';
+@import 'sprites';
+
+// Page furniture
+@import 'furniture';
+
+// Individual components
+@import 'homepage';
