--- a/manchesterio/manchesterio/templates/homepage.html
+++ b/manchesterio/manchesterio/templates/homepage.html
@@ -4,8 +4,8 @@
 
 {% block body %}
     <div class="action-grid">
-        <button class="action-grid__action nearby-station-search" disabled="true">
-            <h2>Find nearby rail stations</h2>
+        <button class="action-grid__action nearby-station-search" disabled="true" data-href="/search/rail-stations/near/{lat},{lon}">
+            <h2 class="nearby-station-search__status" aria-role="status" aria-live="polite">Find nearby rail stations</h2>
             <p class="no-js-warning"><em>Sorry, you need a modern browser with JavaScript to use this feature.</em></p>
         </button>
     </div>
