Start mocking up what search results page might look like

--- a/assets/scss/_furniture.scss
+++ b/assets/scss/_furniture.scss
@@ -41,7 +41,16 @@ body {
 
 .container {
   @include outer-container;
+
   margin: 0 flex-gutter();
+  position: relative;
+}
+
+.container--full-width {
+  @include media($medium-screen) {
+    margin: 0;
+    max-width: 100%;
+  }
 }
 
 .footer {
