--- a/manchesterio/manchesterio/templates/homepage.html
+++ b/manchesterio/manchesterio/templates/homepage.html
@@ -6,7 +6,7 @@
     <div class="container" role="main">
         <div class="action-grid" role="navigation">
             <button class="action-grid__action nearby-station-search" disabled="true" data-href="/search/rail-stations/near/{lat},{lon}">
-                <h2 class="nearby-station-search__status" aria-role="status" aria-live="polite">Find nearby rail stations</h2>
+                <h2 class="action__title nearby-station-search__status" aria-role="status" aria-live="polite">Find nearby rail stations</h2>
                 <p class="no-js-warning"><em>Sorry, you need a modern browser with JavaScript to use this feature.</em></p>
             </button>
         </div>
