Make markers numbered

--- a/assets/scss/manchesterio.scss
+++ b/assets/scss/manchesterio.scss
@@ -2,6 +2,7 @@
 
 @import 'base/base';
 @import 'components/sprites';
+@import 'contrib/leaflet.numbered_markers';
 
 // Page furniture
 @import 'components/furniture';
