--- a/manchesterio/manchesterio/templates/search-results.html
+++ b/manchesterio/manchesterio/templates/search-results.html
@@ -7,23 +7,19 @@
 {% block body %}
 
     <div class="container container--full-width">
-        <div class="results-map" data-starting-lat="{{ startingLat }}" data-starting-lon="{{ startingLon }}">
+        <div class="results-map" data-starting-lat="{{ starting_lat }}" data-starting-lon="{{ starting_lon }}">
             <p class="no-js-warning"><em>Sorry, you need a modern browser with JavaScript to use this feature.</em></p>
         </div>
 
         <ol class="results-list action-list" role="navigation">
-            <li class="action-list__action search-result" data-lat="53.4872" data-lon="-2.2424">
+            {% for station in stations %}
+            <li class="action-list__action search-result" data-lat="{{ station.lat }}" data-lon="{{ station.lon }}">
                 <a href="">
-                    <h2 class="action__title search-result__title">Manchester Victoria</h2>
-                    <p class="search-result__metadata">Mainline rail station, 0.8 mi north</p>
+                    <h2 class="action__title search-result__title">{{ station.name }}</h2>
+                    <p class="search-result__metadata">{{ station.description }}, {{ station.distance_and_bearing }}</p>
                 </a>
             </li>
-            <li class="action-list__action search-result" data-lat="53.477" data-lon="-2.230">
-                <a href="">
-                    <h2 class="action__title search-result__title">Manchester Piccadilly</h2>
-                    <p class="search-result__metadata">Mainline rail station, 0.8 mi west</p>
-                </a>
-            </li>
+            {% endfor %}
         </ol>
     </div>
 
