--- a/manchesterio/manchesterio/templates/search-results.html
+++ b/manchesterio/manchesterio/templates/search-results.html
@@ -16,7 +16,7 @@
             <li class="action-list__action search-result" data-lat="{{ station.lat }}" data-lon="{{ station.lon }}">
                 <a href="">
                     <h2 class="action__title search-result__title">{{ station.name }}</h2>
-                    <p class="search-result__metadata">{{ station.description }}, {{ station.distance_and_bearing }}</p>
+                    <p class="search-result__metadata">{{ station.stop_type }}, {{ station.distance_and_bearing }}</p>
                 </a>
             </li>
             {% endfor %}
