Add Google Analytics opt out

--- a/assets/scss/manchesterio.scss
+++ b/assets/scss/manchesterio.scss
@@ -7,6 +7,7 @@
 // Page furniture
 @import 'components/furniture';
 @import 'components/actions';
+@import 'components/cookies';
 
 // Individual components
 @import 'pages/homepage';
