--- a/manchesterio/manchesterio/templates/base.html
+++ b/manchesterio/manchesterio/templates/base.html
@@ -22,6 +22,13 @@
     <h1 class="site-title"><a href="/" class="site-logo">manchester.io</a> {% block page_header %}{% endblock %}</h1>
 </header>
 
+<section class="analytics-opt-out">
+    <div class="analytics-opt-out__body">
+        <p class="analytics-opt-out__message">This site uses cookies to track site performance</p>
+        <button class="analytics-opt-out__action">Opt Out</button>
+    </div>
+</section>
+
 {% block body %}
 {% endblock %}
 
@@ -41,7 +48,11 @@
         }
     });
     if (cutsMustard()) {
-        require(['manchesterio/main'], function(main) { main(document.body) });
+        require(['manchesterio/analyticsOptOut'], function(AnalyticsOptOut) {
+            var body = document.body;
+            new AnalyticsOptOut(body.querySelector('.analytics-opt-out')).init();
+            require(['manchesterio/main'], function(main) { main(document.body) });
+        });
     }
 </script>
 
