--- a/deploy/site-cookbooks/manchesterio/templates/default/api-server.erb
+++ b/deploy/site-cookbooks/manchesterio/templates/default/api-server.erb
@@ -5,7 +5,7 @@ upstream api_server {
 server {
     listen 80;
     client_max_body_size 4G;
-    server_name <%= @api_hostname %>;
+    server_name <%= node.manchesterio.api_hostname %>;
 
     keepalive_timeout 5;
 
