--- a/deploy/site-cookbooks/manchesterio/templates/default/graphite-server.erb
+++ b/deploy/site-cookbooks/manchesterio/templates/default/graphite-server.erb
@@ -1,15 +1,15 @@
 server {
     listen 80;
     client_max_body_size 4G;
-    server_name <%= @graphite_hostname %>;
+    server_name <%= node.manchesterio.graphite_hostname %>;
 
     keepalive_timeout 5;
 
     location / {
-        auth_basic "<%= @graphite_hostname %>";
+        auth_basic "<%= node.manchesterio.graphite_hostname %>";
         auth_basic_user_file "/opt/sentry/htpasswd";
 
-        uwsgi_pass unix://<%= @graphite_sock %>;
+        uwsgi_pass unix://<%= node.graphite.uwsgi.socket %>;
         include uwsgi_params;
     }
 }
