--- a/deploy/site-cookbooks/manchesterio/templates/default/sentry-server.erb
+++ b/deploy/site-cookbooks/manchesterio/templates/default/sentry-server.erb
@@ -1,10 +1,10 @@
 server {
     listen 80;
-    server_name <%= @sentry_hostname %>;
+    server_name <%= node.sentry.hostname %>;
 
     location / {
         proxy_pass        http://localhost:9000;
-        auth_basic "<%= @sentry_hostname %>";
+        auth_basic "<%= node.sentry.hostname %>";
         auth_basic_user_file "/opt/sentry/htpasswd";
         proxy_set_header REMOTE_USER $remote_user;
         proxy_set_header   Host                 $host;
