--- a/deploy/site-cookbooks/manchesterio/templates/default/medlock.cfg.erb
+++ b/deploy/site-cookbooks/manchesterio/templates/default/medlock.cfg.erb
@@ -1,4 +1,5 @@
 DEBUG = <%= node.manchesterio.debug.to_s.capitalize %>
 SENTRY_DSN = "<%= @sentry_dsn %>"
 NETWORK_RAIL_AUTH = ("<%= @network_rail['user'] %>", "<%= @network_rail['pass'] %>")
+NETWORK_RAIL_CONSUMER_ID = "<%= node.manchesterio.network_rail_consumer_id %>"
 CELERYBEAT_SCHEDULE_FILENAME = "<%= node.manchesterio.root %>/data/celerybeat"
